Update stuff and changed name

--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<!-- saved from url=(0022)http://amiawesome.com/ -->
-<html class="gr__amiawesome_com"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<html class="week_a_week_b"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <!-- iPhone -->
     <meta name="viewport" content="width=575">
-    <link rel="apple-touch-icon" href="http://amiawesome.com/%7BPortraitURL-128%7D">
 
     <script type="text/javascript">
       <!--
