--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
         </script>.
       </div>
 
-      <p> If you're on andriod you can download my app<a href="https://drive.google.com/file/d/0B3hWkpiS2FTDbl93M2VfSlUweUk/view?usp=sharing"> here </a> </p>
-
-
     </div>
+
+    <p> If you're on Android then you can download my app <a href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk">here</a></p>    
   
 
 </body><span class="gr__tooltip"><span class="gr__tooltip-content"></span><i class="gr__tooltip-logo"></i><span class="gr__triangle"></span></span></html>
