--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
   </head>
 
   <body data-gr-c-s-loaded="true">
+    <div id="particles-js"></div>
+
+    <script src="particles.js"></script>
     <div id="content">
       <div id="very">
         <script type="text/javascript">
