Changed the thing

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
     </div>
 
+    <b><p> Its going to be Week A when we get back, 5th of November</p></b>
     <p> If you're on Android then you can download my app <a href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk">here</a></p>
     <p> If you're on iOS then you can follow my 2 minute guide to installing the app <a href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing">here</a></p>    
   
