--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <script type="text/javascript">
       <!--
-          var sayings = ["It's Week B Dude"];
+          var sayings = ["It's The Holiday!"];
           function show_saying() {
               var choice = Math.floor(Math.random() * sayings.length);
               document.write(sayings[choice]);
