--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <!--
              show_saying();
              // -->
-        </script>.
+        </script>
       </div>
 
     </div>
