--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
     </div>
 
-    <u><b><p style = "font-size:30px"> It's going to be Week A when we get back, 5th of November</p></b></u>
-    <p> If you're on Android then you can download my app <a href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk">here</a></p>
-    <p> If you're on iOS then you can follow my 2 minute guide to installing the app <a href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing">here</a></p>    
+    <u><b><p style = "font-size:30px; text-align:center;"> It's going to be Week A when we get back, 5th of November</p></b></u>
+    <p style = "text-align:center;"> If you're on Android then you can download my app <a href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk">here</a></p>
+    <p style = "text-align:center;"> If you're on iOS then you can follow my 2 minute guide to installing the app <a href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing">here</a></p>    
   
 
 </body><span class="gr__tooltip"><span class="gr__tooltip-content"></span><i class="gr__tooltip-logo"></i><span class="gr__triangle"></span></span></html>
