--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="week_a_week_b"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <!-- iPhone -->
     <meta name="viewport" content="width=575">
+    <link rel="apple-touch-icon" href="{PortraitURL-128}"/>
 
     <script type="text/javascript">
       <!--
