--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <script type="text/javascript">
       <!--
-          var sayings = ["It's The Holiday!"];
+          var sayings = ["It's Week A Dude"];
           function show_saying() {
               var choice = Math.floor(Math.random() * sayings.length);
               document.write(sayings[choice]);
@@ -61,7 +61,7 @@
 
     </div>
 
-    <u><b><p style = "font-size:30px; text-align:center;"> It's going to be Week A when we get back, 5th of November</p></b></u>
+    <!--><u><b><p style = "font-size:30px; text-align:center;"> It's going to be Week A when we get back, 5th of November</p></b></u>//-->
     <p style = "text-align:center;"> If you're on Android then you can download my app <a href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk">here</a></p>
     <p style = "text-align:center;"> If you're on iOS then you can follow my 2 minute guide to installing the app <a href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing">here</a></p>    
   
