Added some information
Added a line to call in people who actually know what they are doing, in
the sense of they know how to make websites that look nice because in
the end I can't make a website from scratch to save my life I am soon
hopefully by the grace of exams passing start to learn django or flask
probably django so that I can make websites that are in python rather
than html and js but I do want to learn js because it is a very
functional language and lots of Python websites use js along side anyway
I really have no idea why you are reading this

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
     <!--<u><b><p style = "font-size:30px; text-align:center;"> It's going to be Week A when we get back, 5th of November</p></b></u>-->
     <p style = "text-align:center;"> If you're on Android then you can download my app <a href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk">here</a></p>
-    <p style = "text-align:center;"> If you're on iOS then you can follow my 2 minute guide to installing the app <a href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing">here</a></p>    
+    <p style = "text-align:center;"> If you're on iOS then you can follow my 2 minute guide to installing the app <a href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing">here</a></p>
+    <p style = "text-align:center; font-size:20px;"> If you know how to improve this website, please visit my GitHub <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb">here</a> and either fork or make changes then make a pull request or give suggestions using the Issue report feature <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb/issues">here</a></p>
   
 
 </body><span class="gr__tooltip"><span class="gr__tooltip-content"></span><i class="gr__tooltip-logo"></i><span class="gr__triangle"></span></span></html>
