--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <script type="text/javascript">
       <!--
-          var sayings = ["It's Week A Dude"];
+          var sayings = ["It's Week B Dude"];
           function show_saying() {
               var choice = Math.floor(Math.random() * sayings.length);
               document.write(sayings[choice]);
