--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <script type="text/javascript">
       <!--
-          var sayings = ["It's Week B Dude"];
+          var sayings = ["Its the Week End!"];
           function show_saying() {
               var choice = Math.floor(Math.random() * sayings.length);
               document.write(sayings[choice]);
@@ -47,7 +47,7 @@
 
       #content {
         margin: 1.5em auto 0;
-        width: 50em;
+        width: 75em;
       }
 
       #very {
@@ -71,7 +71,8 @@
 
     </div>
 
-    <!--<u><b><p style = "font-size:30px; text-align:center;"> It's going to be Week A when we get back, 5th of November</p></b></u>-->
+    <!-- -->
+    <u><b><p style = "font-size:30px; text-align:center;"> It's going to be Week A when we get back, 19th of November</p></b></u>
     <p style = "text-align:center; font-size:30px;"> If you're on Android then you can download my app <a href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk">here</a></p>
     <p style = "text-align:center; font-size:30px"> If you're on iOS then you can follow my 2 minute guide to installing the app <a href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing">here</a></p>
     <iframe src="https://discordapp.com/widget?id=377340510907662337&theme=dark" width="900" height="400" allowtransparency="true" frameborder="0"></iframe>
