--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
 
     <!-- -->
     <!-- <u><b><p style = "font-size:30px; text-align:center;"> It's going to be Week A when we get back, 19th of November</p></b></u> -->
+    <u><b><p style = "font-size:30px; text-align:center;"> It's going to be a Holiday, Thursday 30th of November and Sunday 3rd of December</p></b></u>
+    <!--<u><b><p style = "font-size:30px; text-align:center;"> It's going to be then end of the term on the 14th of December and it will be Week A when we get back</p></b></u>-->
     <p style = "text-align:center; font-size:30px;"> If you're on Android then you can download my app <a href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk">here</a></p>
     <p style = "text-align:center; font-size:30px"> If you're on iOS then you can follow my 2 minute guide to installing the app <a href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing">here</a></p>
+    <b><p style = "font-size:30px; text-align:center;"> To join the Discord Chatroom, simply press "connect" on the widget down below</p></b>
     <iframe src="https://discordapp.com/widget?id=377340510907662337&theme=dark" width="900" height="400" allowtransparency="true" frameborder="0"></iframe>
     <p style = "text-align:center; font-size:20px;"> If you know how to improve this website, please visit my GitHub <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb">here</a> and either fork or make changes then make a pull request or give suggestions using the Issue report feature <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb/issues">here</a></p>
 
