--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <script type="text/javascript">
       <!--
-          var sayings = ["It's the Week End"];
+          var sayings = ["It's Week B Dude"];
           function show_saying() {
               var choice = Math.floor(Math.random() * sayings.length);
               document.write(sayings[choice]);
@@ -72,7 +72,7 @@
     </div>
 
     <!-- -->
-    <b><p style = "font-size:40px; text-align:center;"> It's going to be Week B when we get back, 26th of November</p></b>
+    <!--<b><p style = "font-size:40px; text-align:center;"> It's going to be Week B when we get back, 26th of November</p></b>-->
     <u><b><p style = "font-size:30px; text-align:center;"> It's going to be a Holiday, Thursday 30th of November and Sunday 3rd of December</p></b></u>
     <!--<u><b><p style = "font-size:30px; text-align:center;"> It's going to be then end of the term on the 14th of December and it will be Week A when we get back</p></b></u>-->
     <p style = "text-align:center; font-size:30px;"> If you're on Android then you can download my app <a href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk">here</a></p>
