--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <!-- -->
-    <b><p style = "font-size:40px; text-align:center;"> It's going to be Week A when we get back, Monday 4rth of December</p></b>
+    <b><p style = "font-size:40px; text-align:center;"> It's going to be Week A when we get back, Monday 4th of December</p></b>
     <!--<u><b><p style = "font-size:30px; text-align:center;"> It's going to be then end of the term on the 14th of December and it will be Week A when we get back</p></b></u>-->
     <p style = "text-align:center; font-size:30px;"> If you're on Android then you can download my app <a href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk">here</a></p>
     <p style = "text-align:center; font-size:30px"> If you're on iOS then you can follow my 2 minute guide to installing the app <a href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing">here</a></p>
