Added style sheets and robots.txt

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       }
       // -->
     </style>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body data-gr-c-s-loaded="true">
@@ -70,6 +71,8 @@
       </div>
 
     </div>
+
+    <title>Is it Week a or Week b?</title>
 
     <!-- -->
     <!--<b><p style = "font-size:40px; text-align:center;"> It's going to be Week A when we get back, Monday 4th of December</p></b>-->
