Hopefully fixed the look on iOS and Andoid

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="week_a_week_b"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+	<link rel="stylesheet" href= "style.css">
     <!-- iPhone -->
     <meta name="viewport" content="width=575">
     <link rel="apple-touch-icon" href="{PortraitURL-128}"/>
