--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
     </div>
 
     <title>Is it Week a or Week b?</title>
+    <div>
+    <center>
 
     <!-- -->
     <!--<b><p style = "font-size:40px; text-align:center;"> It's going to be Week A when we get back, Monday 4th of December</p></b>-->
@@ -84,6 +86,8 @@
     <b><p style = "font-size:30px; text-align:center;"> To join the Discord Chatroom, simply press "connect" on the widget down below</p></b>
     <iframe src="https://discordapp.com/widget?id=377340510907662337&theme=dark" width="900" height="400" allowtransparency="true" frameborder="0"></iframe>
     <p style = "text-align:center; font-size:20px;"> If you know how to improve this website, please visit my GitHub <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb">here</a> and either fork or make changes then make a pull request or give suggestions using the Issue report feature <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb/issues">here</a></p>
+	</center>
+	</div>
 
 
 </body><span class="gr__tooltip"><span class="gr__tooltip-content"></span><i class="gr__tooltip-logo"></i><span class="gr__triangle"></span></span></html>
