--- a/MockTimeTable.html
+++ b/MockTimeTable.html
@@ -4,7 +4,7 @@
 
 <h1 style = "font-size:75px; text-align:center;">Download Mock Time Tables here YEAR 11 ONLY</h1>
 
-<p style="font-size:50px; text-align:center;"><a href="/MockTimeTable.pdf" download> Download Here! </a>
+<p style="font-size:50px; text-align:center;"><a href="/isitweekaorweekb/MockTimeTable.pdf" download> Download Here! </a>
 
 </body>
 </html>
