--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script type="text/javascript">
       <!--
-          var sayings = ["It's Week B Dude"];
+          var sayings = ["It's the Holiday!"];
           function show_saying() {
               var choice = Math.floor(Math.random() * sayings.length);
               document.write(sayings[choice]);
@@ -89,7 +89,7 @@
 
     <!-- -->
     <!--<b><p style = "font-size:40px; text-align:center;"> It's going to be Week B when we get back, Sunday 10th of December</p></b>-->
-    <u><b><p style = "font-size:30px; text-align:center;"> It's going to be then end of the term on the 14th of December and it will be Week A when we get back</p></b></u>
+    <u><b><p style = "font-size:30px; text-align:center;"> It's going to be Week A when we get back</p></b></u>
     <p style = "text-align:center; font-size:30px;"> If you're on Android then you can download my app <a href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk">here</a></p>
     <p style = "text-align:center; font-size:30px"> If you're on iOS then you can follow my 2 minute guide to installing the app <a href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing">here</a></p>
     <b><p style = "text-align:center; font-size: 40px"> ------>Download Year 11 Mock Timetables <a href="/isitweekaorweekb/MockTimeTable.html">here</a><------</p></b>
