--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script type="text/javascript">
       <!--
-          var sayings = ["It's Week A Dude!"];
+          var sayings = ["It's the Week End!"];
           function show_saying() {
               var choice = Math.floor(Math.random() * sayings.length);
               document.write(sayings[choice]);
@@ -88,7 +88,7 @@
     <center>
 
     <!-- -->
-    <!--<b><p style = "font-size:40px; text-align:center;"> It's going to be Week B when we get back, Sunday 10th of December</p></b>-->
+    <b><p style = "font-size:40px; text-align:center;"> It's going to be Week B when we get back, Sunday 14th of December</p></b>
     <u><b><p style = "font-size:30px; text-align:center;">Good Luck to all Year 11 students!</p></b></u>
     <p style = "text-align:center; font-size:30px;"> If you're on Android then you can download my app <a href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk">here</a></p>
     <p style = "text-align:center; font-size:30px"> If you're on iOS then you can follow my 2 minute guide to installing the app <a href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing">here</a></p>
