--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 	
 </script>
 
+
     <style type="text/css">
       <!--
       body {
-        background: #fff;
+        background: #EAEDED;
         color: #000;
         font-family: Arial, Helvetica, sans-serif;
         margin: 0;
@@ -87,15 +88,37 @@
     <div>
     <center>
 
-    <!-- -->
-    <!--<b><p style = "font-size:40px; text-align:center;"> It's going to be Week B when we get back, Sunday 14th of December</p></b>-->
-    <u><b><p style = "font-size:30px; text-align:center;">Good Luck to all Year 11 students!</p></b></u>
-    <p style = "text-align:center; font-size:30px;"> If you're on Android then you can download my app <a href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk">here</a></p>
-    <p style = "text-align:center; font-size:30px"> If you're on iOS then you can follow my 2 minute guide to installing the app <a href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing">here</a></p>
-    <b><p style = "text-align:center; font-size: 40px"> ------>Download Year 11 Mock Timetables <a href="/isitweekaorweekb/MockTimeTable.html">here</a><------</p></b>
-    <b><p style = "font-size:30px; text-align:center;"> To join the Discord Chatroom, simply press "connect" on the widget down below</p></b>
-    <iframe src="https://discordapp.com/widget?id=377340510907662337&theme=dark" width="900" height="400" allowtransparency="true" frameborder="0"></iframe>
-    <p style = "text-align:center; font-size:20px;"> If you know how to improve this website, please visit my GitHub <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb">here</a> and either fork or make changes then make a pull request or give suggestions using the Issue report feature <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb/issues">here</a></p>
+
+    <div class = "information">
+    	<u><b><h style = "font-size: 40px; text-align: center;">Information</h></b></u>
+    	<!--<p style = "font-size:30px; text-align:center;">Week A when we get back, Sunday 14th of December</p>-->
+    	<p style = "font-size:30px; text-align:center;">Good Luck to all Year 11 students!</p>
+    	<u><b><h style = "font-size: 40px; text-align: center;">WIS-BYOD Login</h></b></u>
+    	<p></p>
+    	<h style = "font-size:30px; text-align:center;">User: wisp122</h>
+    	<p></p>
+    	<h style = "font-size:30px; text-align:center;">Pass: wtrkjk</h>
+    </div>
+
+    <div class = "Downloads">
+    	<u><b><h style="font-size: 40px; text-align: top; float: bottom;">Downloads</h></b></u>
+
+    	<p></p>
+    	<a style = "text-align:center; font-size:30px;" href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk"> Android App APK</a>
+    	<p></p>
+    	<a href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing" style = "text-align:center; font-size:30px"> iOS App Tutorial </a>
+    	<p></p>
+    	<a style = "text-align:center; font-size: 30px" href="/isitweekaorweekb/MockTimeTable.html">Year 11 Mock Timetables</a>
+
+    </div>
+
+    <div class = "Discord">
+    	<u><b><h style = "font-size: 40px; text-align: center;">Discord</h></b></u>
+    	    <p style = "font-size:30px; text-align:center;"> To join the Discord Chatroom, simply press "connect" on the widget down below</p>
+    <iframe src="https://discordapp.com/widget?id=377340510907662337&theme=dark" width="600" height="400" allowtransparency="true" frameborder="0"></iframe>
+	</div>
+
+	<p style = "text-align:center; font-size:20px; float: bottom"> If you know how to improve this website, please visit my GitHub <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb">here</a> and either fork or make changes then make a pull request or give suggestions using the Issue report feature <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb/issues">here</a></p>
 	</center>
 	</div>
 
