--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script type="text/javascript">
       <!--
-          var sayings = ["It's the Week End"];
+          var sayings = ["It's Week A Dude!"];
           function show_saying() {
               var choice = Math.floor(Math.random() * sayings.length);
               document.write(sayings[choice]);
@@ -91,7 +91,7 @@
 
     <div class = "information">
     	<u><b><h style = "font-size: 40px; text-align: center;">Information</h></b></u>
-    	<p style = "font-size:30px; text-align:center;">Week A when we get back, Sunday 21th of January</p>
+    	<p style = "font-size:30px; text-align:center;">Week B Next Week Sunday 28th of January</p>
     	<u><b><h style = "font-size: 40px; text-align: center;">WIS-BYOD Login</h></b></u>
     	<p></p>
     	<h style = "font-size:30px; text-align:center;">User: wisp122</h>
