Changed some critical Information

--- a/index.html
+++ b/index.html
@@ -92,11 +92,13 @@
     <div class = "information">
     	<u><b><h style = "font-size: 40px; text-align: center;">Information</h></b></u>
     	<p style = "font-size:30px; text-align:center;">Week B Next Week Sunday 28th of January</p>
-    	<u><b><h style = "font-size: 40px; text-align: center;">WIS-BYOD Login</h></b></u>
+    	<u><b><h style = "font-size: 40px; text-align: center;">Wifi Has Been Fixed!</h></b></u>
     	<p></p>
-    	<h style = "font-size:30px; text-align:center;">User: wisp122</h>
+    	<u><h style = "font-size: 30px; text-align: center;">Connect to 'Gems' Wifi</h></u>
     	<p></p>
-    	<h style = "font-size:30px; text-align:center;">Pass: wtrkjk</h>
+    	<h style = "font-size:30px; text-align:center;">User: firstName.firstLetterOfLastName_wis</h>
+    	<p></p>
+    	<h style = "font-size:30px; text-align:center;">Pass: gwis2020 (default)</h>
     </div>
 
     <div class = "Downloads">
