Changed a small error for better compatibility

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     	<p></p>
     	<h style = "font-size:30px; text-align:center;">User: firstName.firstLetterOfLastName_wis</h>
     	<p></p>
-    	<h style = "font-size:30px; text-align:center;">Pass: gwis2020 (default)</h>
+    	<h style = "font-size:30px; text-align:center;">Pass: gwis(year of graduation)</h>
     </div>
 
     <div class = "Downloads">
