--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script type="text/javascript">
       <!--
-          var sayings = ["It's the Week End!"];
+          var sayings = ["It's Week A Dude!"];
           function show_saying() {
               var choice = Math.floor(Math.random() * sayings.length);
               document.write(sayings[choice]);
@@ -91,7 +91,7 @@
 
     <div class = "information">
     	<u><b><h style = "font-size: 40px; text-align: center;">Information</h></b></u>
-    	<p style = "font-size:30px; text-align:center;">Week A Next Week Sunday 4th of Febuary</p>
+    	<p style = "font-size:30px; text-align:center;">Week B when we return Sunday 18th of Febuary</p>
     	<u><b><h style = "font-size: 40px; text-align: center;">Wifi Has Been Fixed!</h></b></u>
     	<p></p>
     	<u><h style = "font-size: 30px; text-align: center;">Connect to 'Gems' Wifi</h></u>
