Added some stuffs

--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
 
     <div class = "information">
     	<u><b><h style = "font-size: 40px; text-align: center;">Information</h></b></u>
-    	<p style = "font-size:30px; text-align:center;">Week B when we return Sunday 18th of Febuary</p>
+    	<p></p>
+    	<h style = "font-size:30px; text-align:center;">Week B when we return Sunday 18th of Febuary</h>
+    	<p></p>
+    	<h style = "font-size: 30px; text-align: center;"> Sports Day is 28th Febuary</h>
+    	<p></p>
     	<u><b><h style = "font-size: 40px; text-align: center;">Wifi Has Been Fixed!</h></b></u>
     	<p></p>
     	<u><h style = "font-size: 30px; text-align: center;">Connect to 'Gems' Wifi</h></u>
