Added the exam timetable

--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
     	<p></p>
     	<a href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing" style = "text-align:center; font-size:30px"> iOS App Tutorial </a>
     	<p></p>
+    	<p></p>
+    	<a href="isitweekaorweekb/Timetable2018.pdf" style = "text-align:center; font-size:30px">Summer 2018 I/GCSE Exam TimeTable</a>
+    	<p></p>
 
     </div>
 
