committing my life away

--- a/index.html
+++ b/index.html
@@ -58,5 +58,8 @@
         </p>
     </div>
 </div>
+<canvas id="canvas" width="1950px" height="800px"></canvas>
+<canvas id="canvasbg" width="1950px" height="800px"></canvas>
+<script src="cool.js"></script>
 </body>
 </html>
