--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 </div>
 <div class="uk-child-width-1-3" uk-grid>
     <div>
-        <div class="uk-light uk-background-secondary uk-padding">
-            <h4>What week is it when we go back to school?</h4>
-            <p>Week B when we return Sunday 18th of February</p>
+        <div class="uk-light uk-background-transparent uk-padding">
+            <h4 style="font-size: 2em">What week is it when we go back to school?</h4>
+            <p style="font-size: 1.3em">Week B when we return Sunday 18th of February</p>
         </div>
     </div>
     <div>
-        <div class="uk-dark uk-background-muted uk-padding">
+        <div class="uk-light uk-background-transparent uk-padding">
             <h3>Wifi has been fixed!</h3>
             <p>Connect to 'Gems' Wifi</p>
             <p>User: firstName.firstLetterOfLastName_wis</p>
@@ -37,12 +37,12 @@
         </div>
     </div>
     <div>
-        <div class="uk-light uk-background-secondary uk-padding">
+        <div class="uk-light uk-background-transparent uk-padding">
             <h2>Downloads</h2>
-            <h3><a class="uk-link-heading effect-underline" href="" data-hover="Android APK App">Android APK App</a></h3>
-            <h3><a class="uk-link-heading effect-underline" href="" data-hover="iOs App Tutorial">iOS App Tutorial</a></h3>
-            <h3><a class="uk-link-heading effect-underline" href="" data-hover="Summer 2018 I/GCSE Exam Timetable">Summer 2018 I/GCSE Exam Timetable</a></h3>
-            <button class="uk-button uk-button-default">Join the discord</button>
+            <h3><a class="uk-link-heading effect-underline" href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk" data-hover="Android APK App">Android APK App</a></h3>
+            <h3><a class="uk-link-heading effect-underline" href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing" data-hover="iOS App Tutorial">iOS App Tutorial</a></h3>
+            <h3><a class="uk-link-heading effect-underline" href="isitweekaorweekb/Timetable2018.pdf" data-hover="Summer 2018 I/GCSE Exam Timetable">Summer 2018 I/GCSE Exam Timetable</a></h3>
+            <button class="uk-button uk-button-default" style="font-size: 1.3em"><a href="https://discord.gg/4DP4GQJ">Join the discord</a></button>
         </div>
     </div>
 </div>
@@ -52,7 +52,10 @@
         <ul class="uk-list uk-list-divider">
             <li>Sports Day is 28th February</li>
         </ul>
-        <p>If you know how to improve this website, please visit my GitHub here and either fork or make changes then make a pull request or give suggestions using the Issue report feature here</p>
+        <hr>
+        <h>Website Re-Design - Atomicsong</h>
+        <a href="https://discord.gg/dUSFdJ6">his Discord Server</a>
+        <p>If you know how to improve this website, please visit my GitHub <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb">here</a> and either fork or make changes then make a pull request or give suggestions using the Issue report feature <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb/issues">here</a></p>
         <p class="uk-text-right">
             <button class="uk-button uk-button-default uk-modal-close" type="button">Close</button>
         </p>
