Added and Changed Stuff

--- a/index.html
+++ b/index.html
@@ -6,13 +6,23 @@
 <!-- iPhone -->
 <meta name="viewport" content="width=575">
 <link rel="apple-touch-icon" href="{PortraitURL-128}"/>
-<!-- Google Scripts -->
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109707332-1"></script>
 <script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-5613048528595650",
-    enable_page_level_ads: true
-  });
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109707332-1');
+</script>
+<!-- Google Adsense Scripts -->
+<script async src="//pagead2.googlesyndication.com/
+pagead/js/adsbygoogle.js"></script>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({
+google_ad_client: "ca-pub-5613048528595650",
+enable_page_level_ads: true
+});
 </script>
 <!-- UIkit CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.39/css/uikit.min.css" />
