--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ enable_page_level_ads: true
     <div class="uk-modal-dialog uk-modal-body">
         <h2 class="uk-modal-title">More information</h2>
         <ul class="uk-list uk-list-divider">
+        	<li>Prom is 20th April @ Five Hotel, The Palm</li>
             <li>Sports Day is 28th February</li>
         </ul>
         <hr>
