i think this should work

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ enable_page_level_ads: true
             <h2>Downloads</h2>
             <h3><a class="uk-link-heading effect-underline" href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk" data-hover="Android APK App">Android APK App</a></h3>
             <h3><a class="uk-link-heading effect-underline" href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing" data-hover="iOS App Tutorial">iOS App Tutorial</a></h3>
-            <h3><a class="uk-link-heading effect-underline" href="isitweekaorweekb/Timetable2018.pdf" data-hover="Summer 2018 I/GCSE Exam Timetable">Summer 2018 I/GCSE Exam Timetable</a></h3>
+            <h3><a class="uk-link-heading effect-underline" href="/Timetable2018.pdf" data-hover="Summer 2018 I/GCSE Exam Timetable">Summer 2018 I/GCSE Exam Timetable</a></h3>
             <button class="uk-button uk-button-default" style="font-size: 1.3em"><a href="https://discord.gg/4DP4GQJ">Join the discord</a></button>
         </div>
     </div>
