yeah the previous commit worked

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ enable_page_level_ads: true
     <div class="uk-modal-dialog uk-modal-body">
         <h2 class="uk-modal-title">More information</h2>
         <ul class="uk-list uk-list-divider">
-        	<li>Prom is 20th April @ Five Hotel, The Palm</li>
+        	<li>Prom is 20th April @ <a href="https://www.google.ae/search?q=Five+Hotel%2C+The+Palm&oq=Five+Hotel%2C+The+Palm&aqs=chrome..69i57&sourceid=chrome&ie=UTF-8"> Five Hotel, The Palm </a></li>
             <li>Sports Day is 28th February</li>
         </ul>
         <hr>
