--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ enable_page_level_ads: true
 <div class="uk-flex-last">
     <div class="uk-card uk-card-primary uk-card-body" id="weekaorb">Is it week A or week B?</div>
     <div>
-        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's Week B Dude!</div>
+        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's the Week End!</div>
     </div>
 </div>
 <div class="uk-child-width-1-3" uk-grid>
@@ -68,7 +68,8 @@ enable_page_level_ads: true
     <div class="uk-modal-dialog uk-modal-body">
         <h2 class="uk-modal-title">More information</h2>
         <ul class="uk-list uk-list-divider">
-        	<li>Prom is 20th April @ <a href="https://www.google.ae/search?q=Five+Hotel%2C+The+Palm&oq=Five+Hotel%2C+The+Palm&aqs=chrome..69i57&sourceid=chrome&ie=UTF-8"> Five Hotel, The Palm </a></li>
+        	<li>The school cafe is changing to a cashless system. You instead use your School ID/Bus ID, and you load the card with money from reception. This change takes effect from 25th Feb and onwards until further notice!</li>
+        	<li>Year 11 Prom is 20th April @ <a href="https://www.google.ae/search?q=Five+Hotel%2C+The+Palm&oq=Five+Hotel%2C+The+Palm&aqs=chrome..69i57&sourceid=chrome&ie=UTF-8"> Five Hotel, The Palm </a></li>
             <li>Sports Day is 28th February</li>
         </ul>
         <hr>
