Added Google Adsense Code
yay 100 commits!

--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
   gtag('config', 'UA-109707332-1');
 </script>
 <!-- Google Adsense Scripts -->
-<script async src="//pagead2.googlesyndication.com/
-pagead/js/adsbygoogle.js"></script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
-(adsbygoogle = window.adsbygoogle || []).push({
-google_ad_client: "ca-pub-5613048528595650",
-enable_page_level_ads: true
-});
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5613048528595650",
+    enable_page_level_ads: true
+  });
 </script>
 <!-- UIkit CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.39/css/uikit.min.css" />
