Added some stuff

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             <h3>Wifi has been fixed!</h3>
             <p>Connect to 'Gems' Wifi</p>
             <p>User: firstName.firstLetterOfLastName_wis</p>
-            <p>Password: gwis(year of graduation)</p>
+            <p>Password: gwis(year of year 13 graduation)</p>
+          	<button class="uk-button uk-button-default uk-margin-small-right" type="button"><a href="WIS Programming Challenge.html">WIS Programming Challenge</a></button>
             <button class="uk-button uk-button-default uk-margin-small-right" type="button" uk-toggle="target: #openlol">More information</button>
         </div>
     </div>
