--- a/WIS Programming Challenge.html
+++ b/WIS Programming Challenge.html
@@ -34,35 +34,33 @@
 <div class="uk-flex-last">
     <div class="uk-card uk-card-primary uk-card-body" id="weekaorb">Is it week A or week B?</div>
     <div>
-        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's Week A Dude!</div>
+        <div class="uk-background-secondary uk-padding uk-light" id="answer">WIS Programming Challenge</div>
     </div>
 </div>
 <div class="uk-child-width-1-3" uk-grid>
     <div>
         <div class="uk-light uk-background-transparent uk-padding">
-            <h4 style="font-size: 2em">What week is it next week?</h4>
-            <p style="font-size: 1.3em">Week B when we return Sunday 4th of March</p>
+            <p></p>
+        </div>
+    </div>
+    <div>
+        <div class="uk-light uk-background-transparent uk-padding" style="text-align: center;">
+            <h3 style="font-size: 2.5em">This Week's Challenge</h3>
+            <p style="font-size: 1.6em">Binary To Decimal Converter</p>
+            <button class="uk-button uk-button-default uk-margin-small-right" type="button"><a href="https://docs.google.com/presentation/d/1o4JmEn3Wt7rf2tq3KB8l0gRFDZ2V5mrUDV2UeHfWk60/edit?usp=sharing">WIS Programming Challenge Guide/Rules</a></button>
+            <p></p>
+            <button class="uk-button uk-button-default uk-margin-small-right" type="button"><a href="leader board.html">Leader Board</a></button>
+            <p></p>
+            <button class="uk-button uk-button-default uk-margin-small-right" type="button"><a href="index.html">Return Back to Main Page</a></button>
         </div>
     </div>
     <div>
         <div class="uk-light uk-background-transparent uk-padding">
-            <h3>Wifi has been fixed!</h3>
-            <p>Connect to 'Gems' Wifi</p>
-            <p>User: firstName.firstLetterOfLastName_wis</p>
-            <p>Password: gwis(year of graduation)</p>
-            <button class="uk-button uk-button-default uk-margin-small-right" type="button" uk-toggle="target: #openlol">More information</button>
-        </div>
-    </div>
-    <div>
-        <div class="uk-light uk-background-transparent uk-padding">
-            <h2>Downloads</h2>
-            <h3><a class="uk-link-heading effect-underline" href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk" data-hover="Android APK App">Android APK App</a></h3>
-            <h3><a class="uk-link-heading effect-underline" href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing" data-hover="iOS App Tutorial">iOS App Tutorial</a></h3>
-            <h3><a class="uk-link-heading effect-underline" href="Timetable2018.pdf" data-hover="Summer 2018 I/GCSE Exam Timetable">Summer 2018 I/GCSE Exam Timetable</a></h3>
-            <button class="uk-button uk-button-default" style="font-size: 1.3em"><a href="https://discord.gg/4DP4GQJ">Join the discord</a></button>
+            <p></p>
         </div>
     </div>
 </div>
+<!--
 <div id="openlol" uk-modal>
     <div class="uk-modal-dialog uk-modal-body">
         <h2 class="uk-modal-title">More information</h2>
@@ -80,6 +78,7 @@
         </p>
     </div>
 </div>
+-->
 <canvas id="canvas" width="1950px" height="800px"></canvas>
 <canvas id="canvasbg" width="1950px" height="800px"></canvas>
 <script src="cool.js"></script>
