--- a/leader board.html
+++ b/leader board.html
@@ -34,50 +34,25 @@
 <div class="uk-flex-last">
     <div class="uk-card uk-card-primary uk-card-body" id="weekaorb">Is it week A or week B?</div>
     <div>
-        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's Week A Dude!</div>
+        <div class="uk-background-secondary uk-padding uk-light" id="answer">WIS Programming Challenge Leader Board</div>
     </div>
 </div>
 <div class="uk-child-width-1-3" uk-grid>
     <div>
         <div class="uk-light uk-background-transparent uk-padding">
-            <h4 style="font-size: 2em">What week is it next week?</h4>
-            <p style="font-size: 1.3em">Week B when we return Sunday 4th of March</p>
+            <p></p>
+        </div>
+    </div>
+    <div>
+        <div class="uk-light uk-background-transparent uk-padding" style="text-align: center;">
+            <button class="uk-button uk-button-default uk-margin-small-right" type="button"><a href="index.html">Return Back to Main Page</a></button>
+            <p>No one at the current time</p>
         </div>
     </div>
     <div>
         <div class="uk-light uk-background-transparent uk-padding">
-            <h3>Wifi has been fixed!</h3>
-            <p>Connect to 'Gems' Wifi</p>
-            <p>User: firstName.firstLetterOfLastName_wis</p>
-            <p>Password: gwis(year of graduation)</p>
-            <button class="uk-button uk-button-default uk-margin-small-right" type="button" uk-toggle="target: #openlol">More information</button>
+            <p></p>
         </div>
-    </div>
-    <div>
-        <div class="uk-light uk-background-transparent uk-padding">
-            <h2>Downloads</h2>
-            <h3><a class="uk-link-heading effect-underline" href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk" data-hover="Android APK App">Android APK App</a></h3>
-            <h3><a class="uk-link-heading effect-underline" href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing" data-hover="iOS App Tutorial">iOS App Tutorial</a></h3>
-            <h3><a class="uk-link-heading effect-underline" href="Timetable2018.pdf" data-hover="Summer 2018 I/GCSE Exam Timetable">Summer 2018 I/GCSE Exam Timetable</a></h3>
-            <button class="uk-button uk-button-default" style="font-size: 1.3em"><a href="https://discord.gg/4DP4GQJ">Join the discord</a></button>
-        </div>
-    </div>
-</div>
-<div id="openlol" uk-modal>
-    <div class="uk-modal-dialog uk-modal-body">
-        <h2 class="uk-modal-title">More information</h2>
-        <ul class="uk-list uk-list-divider">
-        	<li>The school cafe is changing to a cashless system. You instead use your School ID/Bus ID, and you load the card with money from reception. This change takes effect from 25th Feb and onwards until further notice!</li>
-        	<li>Year 11 Prom is 20th April @ <a href="https://www.google.ae/search?q=Five+Hotel%2C+The+Palm&oq=Five+Hotel%2C+The+Palm&aqs=chrome..69i57&sourceid=chrome&ie=UTF-8"> Five Hotel, The Palm </a></li>
-            <li>Sports Day is 28th February</li>
-        </ul>
-        <hr>
-        <h>Website Re-Design - Atomicsong</h>
-        <a href="https://discord.gg/dUSFdJ6">his Discord Server</a>
-        <p>If you know how to improve this website, please visit my GitHub <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb">here</a> and either fork or make changes then make a pull request or give suggestions using the Issue report feature <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb/issues">here</a></p>
-        <p class="uk-text-right">
-            <button class="uk-button uk-button-default uk-modal-close" type="button">Close</button>
-        </p>
     </div>
 </div>
 <canvas id="canvas" width="1950px" height="800px"></canvas>
