--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <div class="uk-modal-dialog uk-modal-body">
         <h2 class="uk-modal-title">More information</h2>
         <ul class="uk-list uk-list-divider">
+        	<li>International Day Wednesday 14th March</li>
         	<li>Year 11 Prom is 20th April @ <a href="https://www.google.ae/search?q=Five+Hotel%2C+The+Palm&oq=Five+Hotel%2C+The+Palm&aqs=chrome..69i57&sourceid=chrome&ie=UTF-8"> Five Hotel, The Palm </a></li>
         </ul>
         <hr>
