removed and added stuff

--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
         	<li>Year 11 Prom is 20th April @ <a href="https://www.google.ae/search?q=Five+Hotel%2C+The+Palm&oq=Five+Hotel%2C+The+Palm&aqs=chrome..69i57&sourceid=chrome&ie=UTF-8"> Five Hotel, The Palm </a></li>
         </ul>
         <hr>
-        <h>Website Re-Design - Atomicsong</h>
-        <a href="https://discord.gg/dUSFdJ6">his Discord Server</a>
+        <h>Website Re-Design - Atomicsong @ Commit #89</h>
         <p>If you know how to improve this website, please visit my GitHub <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb">here</a> and either fork or make changes then make a pull request or give suggestions using the Issue report feature <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb/issues">here</a></p>
         <p class="uk-text-right">
             <button class="uk-button uk-button-default uk-modal-close" type="button">Close</button>
