--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
         <h2 class="uk-modal-title">More information</h2>
         <ul class="uk-list uk-list-divider">
         	<li>International Day Wednesday 14th March</li>
+        	<li>World Book Week April 23rd-26th</li>
+        	<li>Dressing up day Thursday 26th April</li>
         	<li>Year 11 Prom is 20th April @ <a href="https://www.google.ae/search?q=Five+Hotel%2C+The+Palm&oq=Five+Hotel%2C+The+Palm&aqs=chrome..69i57&sourceid=chrome&ie=UTF-8"> Five Hotel, The Palm </a></li>
         </ul>
         <hr>
