changed more stuff

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
         	<li>World Book Week April 23rd-26th</li>
         	<li>Dressing up day Thursday 26th April</li>
         	<li> Dressing Up Themes</li>
-        	<li> Y7 - Oliver Twist</li>
-			<li>Y8 = Romeo and Juliet</li>
-			<li>Y9 = Sherlock Holmes</li>
-			<li>Y10 = An Inspector Calls</li>
-			<li>Y11 = Ozymandias, Bayonet Charge or My Last Duchess</li>
-			<li>Post-16 = Harry Potter</li>
+        	<li>Y7 - Oliver Twist</li>
+			<li>Y8 - Romeo and Juliet</li>
+			<li>Y9 - Sherlock Holmes</li>
+			<li>Y10 - An Inspector Calls</li>
+			<li>Y11 - Ozymandias, Bayonet Charge or My Last Duchess</li>
+			<li>Post-16 - Harry Potter</li>
 			<li></li>
         	<li>Year 11 Prom is 20th April @ <a href="https://www.google.ae/search?q=Five+Hotel%2C+The+Palm&oq=Five+Hotel%2C+The+Palm&aqs=chrome..69i57&sourceid=chrome&ie=UTF-8"> Five Hotel, The Palm </a></li>
         </ul>
