--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 <div class="uk-flex-last">
     <div class="uk-card uk-card-primary uk-card-body" id="weekaorb">Is it week A or week B?</div>
     <div>
-        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's the holiday!</div>
+        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's Week A Dude!</div>
     </div>
 </div>
 <div class="uk-child-width-1-3" uk-grid>
     <div>
         <div class="uk-light uk-background-transparent uk-padding">
             <h4 style="font-size: 2em">What week is it next week?</h4>
-            <p style="font-size: 1.3em">Week A when we return after the break</p>
+            <p style="font-size: 1.3em">Week B on Sunday 15th April</p>
         </div>
     </div>
     <div>
