Changed some more stuff

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div>
         <div class="uk-light uk-background-transparent uk-padding">
             <h4 style="font-size: 2em">What week is it next week?</h4>
-            <p style="font-size: 1.3em">Week B on Sunday 15th April</p>
+            <p style="font-size: 1.3em">It's going to be Week B on Sunday 15th April</p>
         </div>
     </div>
     <div>
@@ -61,7 +61,6 @@
             <h3><a class="uk-link-heading effect-underline" href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing" data-hover="iOS App Tutorial">iOS App Tutorial</a></h3>
             <h3><a class="uk-link-heading effect-underline" href="Timetable2018.pdf" data-hover="Summer 2018 I/GCSE Exam Timetable">Summer 2018 I/GCSE Exam Timetable</a></h3>
             <h3><a class="uk-link-heading effect-underline" href="WISDOM Sessions Timetable FINAL.pdf" data-hover="WISDOM Sessions Timetable">WISDOM Sessions Timetable</a></h3>
-             <h3><a class="uk-link-heading effect-underline" href="Year 11 WISdom Sessions.pdf" data-hover="WISDOM Sessions Timetable">Spring Break WISdom Sessions</a></h3>
         </div>
     </div>
 </div>
