--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="uk-flex-last">
     <div class="uk-card uk-card-primary uk-card-body" id="weekaorb">Is it week A or week B?</div>
     <div>
-        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's Week A Dude!</div>
+        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's The Weekend!</div>
     </div>
 </div>
 <div class="uk-child-width-1-3" uk-grid>
@@ -81,6 +81,7 @@
 			<li>Post-16 - Harry Potter</li>
 			<li></li>
         	<li>Year 11 Prom is 20th April @ <a href="https://www.google.ae/search?q=Five+Hotel%2C+The+Palm&oq=Five+Hotel%2C+The+Palm&aqs=chrome..69i57&sourceid=chrome&ie=UTF-8"> Five Hotel, The Palm </a></li>
+        	<li>Congrats to Year 11 for finishing their Science and Language Oral Mocks!</li>
         </ul>
         <hr>
         <h>Website Re-Design - Atomicsong @ Commit #89</h>
