stuff removed and added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="uk-flex-last">
     <div class="uk-card uk-card-primary uk-card-body" id="weekaorb">Is it week A or week B?</div>
     <div>
-        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's Year 11 Prom! (weekend)</div>
+        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's the Weekend!</div>
     </div>
 </div>
 <div class="uk-child-width-1-3" uk-grid>
@@ -70,7 +70,7 @@
         <ul class="uk-list uk-list-divider">
         	<li>In some devices not all of the items on the page show, so zoom out to ensure you're not missing anything</li>
         	<li>Also it is highly likely that the 2 week timetable will not continue next year, so this project is unfortunately coming to a close</li>
-        	<li>World Book Week April 23rd-26th</li>
+        	<li>World Book Week April 22rd-26th</li>
         	<li>Dressing up day Thursday 26th April</li>
         	<li> Dressing Up Themes</li>
         	<li>Y7 - Oliver Twist</li>
@@ -79,9 +79,6 @@
 			<li>Y10 - An Inspector Calls</li>
 			<li>Y11 - Ozymandias, Bayonet Charge or My Last Duchess</li>
 			<li>Post-16 - Harry Potter</li>
-			<li></li>
-        	<li>Year 11 Prom is 20th April @ <a href="https://www.google.ae/search?q=Five+Hotel%2C+The+Palm&oq=Five+Hotel%2C+The+Palm&aqs=chrome..69i57&sourceid=chrome&ie=UTF-8"> Five Hotel, The Palm </a></li>
-        	<li>Congrats to Year 11 for finishing their Science and Language Oral Mocks!</li>
         </ul>
         <hr>
         <h>Website Re-Design - Atomicsong @ Commit #89</h>
