changed and added some stuff

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p>Connect to 'Gems' Wifi</p>
             <p>User: firstName.firstLetterOfLastName_wis</p>
             <p>Password: gwis(year of year 13 graduation)</p>
-          	<button class="uk-button uk-button-default uk-margin-small-right" type="button"><a href="WIS Programming Challenge.html">WIS Programming Challenge</a></button>
+          	<!--<button class="uk-button uk-button-default uk-margin-small-right" type="button"><a href="WIS Programming Challenge.html">WIS Programming Challenge</a></button>-->
             <button class="uk-button uk-button-default uk-margin-small-right" type="button" uk-toggle="target: #openlol">More information</button>
         </div>
     </div>
@@ -70,6 +70,7 @@
         <ul class="uk-list uk-list-divider">
         	<li>In some devices not all of the items on the page show, so zoom out to ensure you're not missing anything</li>
         	<li>Also it is highly likely that the 2 week timetable will not continue next year, so this project is unfortunately coming to a close</li>
+        	<li>Well done to IGCSE English Candidates!</li>
         </ul>
         <hr>
         <h>Website Re-Design - Atomicsong @ Commit #89</h>
