--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <ul class="uk-list uk-list-divider">
         	<li>In some devices not all of the items on the page show, so zoom out to ensure you're not missing anything</li>
         	<li>Also it is highly likely that the 2 week timetable will not continue next year, so this project is unfortunately coming to a close</li>
-        	<li>Well done to IGCSE English Candidates!</li>
+        	<li>Good Luck to All GCSE Students! May AQA Examiners mark with mercy...</li>
         </ul>
         <hr>
         <h>Website Re-Design - Atomicsong @ Commit #89</h>
