--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <div class="uk-modal-dialog uk-modal-body">
         <h2 class="uk-modal-title">More information</h2>
         <ul class="uk-list uk-list-divider">
+        	<li>Ramadan Kareem!</li>
         	<li>In some devices not all of the items on the page show, so zoom out to ensure you're not missing anything</li>
         	<li>Also it is highly likely that the 2 week timetable will not continue next year, so this project is unfortunately coming to a close</li>
         	<li>Good Luck to All GCSE Students! May AQA Examiners mark with mercy...</li>
