--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="uk-flex-last">
     <div class="uk-card uk-card-primary uk-card-body" id="weekaorb">Is it week A or week B?</div>
     <div>
-        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's Week B Dude!</div>
+        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's Week B Dude! Ramadan Kareem!</div>
     </div>
 </div>
 <div class="uk-child-width-1-3" uk-grid>
@@ -69,7 +69,6 @@
     <div class="uk-modal-dialog uk-modal-body">
         <h2 class="uk-modal-title">More information</h2>
         <ul class="uk-list uk-list-divider">
-        	<li>Ramadan Kareem!</li>
         	<li>In some devices not all of the items on the page show, so zoom out to ensure you're not missing anything</li>
         	<li>Also it is highly likely that the 2 week timetable will not continue next year, so this project is unfortunately coming to a close</li>
         	<li>Good Luck to All GCSE Students! May AQA Examiners mark with mercy...</li>
