--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 <div class="uk-flex-last">
     <div class="uk-card uk-card-primary uk-card-body" id="weekaorb">Is it week A or week B?</div>
     <div>
-        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's The Weekend! Ramadan Kareem!</div>
+        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's Week A Dude! Ramadan Kareem!</div>
     </div>
 </div>
 <div class="uk-child-width-1-3" uk-grid>
     <div>
         <div class="uk-light uk-background-transparent uk-padding">
             <h4 style="font-size: 2em">What week is it next week?</h4>
-            <p style="font-size: 1.3em">It's going to be Week A on Sunday 20th May</p>
+            <p style="font-size: 1.3em">It's going to be Week B on Sunday 27th May</p>
         </div>
     </div>
     <div>
@@ -60,7 +60,7 @@
             <h3><a class="uk-link-heading effect-underline" href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk" data-hover="Android APK App">Android APK App</a></h3>
             <h3><a class="uk-link-heading effect-underline" href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing" data-hover="iOS App Tutorial">iOS App Tutorial</a></h3>
             <h3><a class="uk-link-heading effect-underline" href="Timetable2018.pdf" data-hover="Summer 2018 I/GCSE Exam Timetable">Summer 2018 I/GCSE Exam Timetable</a></h3>
-            <h3><a class="uk-link-heading effect-underline" href="Week One - WISdom Weeks Sunday 13th May Week B.pdf" data-hover="Summer 2018 WISDOM Sessions Timetable">Summer I/GCSE 2018 WISDOM Sessions Timetable</a></h3>
+            <!--<h3><a class="uk-link-heading effect-underline" href="Week One - WISdom Weeks Sunday 13th May Week B.pdf" data-hover="Summer 2018 WISDOM Sessions Timetable">Summer I/GCSE 2018 WISDOM Sessions Timetable</a></h3>-->
             <h3><a class="uk-link-heading effect-underline" href="WISDOM Sessions Timetable FINAL.pdf" data-hover="WISDOM Sessions Timetable">WISDOM Sessions Timetable</a></h3>
         </div>
     </div>
