--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h3><a class="uk-link-heading effect-underline" href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk" data-hover="Android APK App">Android APK App</a></h3>
             <h3><a class="uk-link-heading effect-underline" href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing" data-hover="iOS App Tutorial">iOS App Tutorial</a></h3>
             <h3><a class="uk-link-heading effect-underline" href="Timetable2018.pdf" data-hover="Summer 2018 I/GCSE Exam Timetable">Summer 2018 I/GCSE Exam Timetable</a></h3>
-            <!--<h3><a class="uk-link-heading effect-underline" href="Week One - WISdom Weeks Sunday 13th May Week B.pdf" data-hover="Summer 2018 WISDOM Sessions Timetable">Summer I/GCSE 2018 WISDOM Sessions Timetable</a></h3>-->
+            <h3><a class="uk-link-heading effect-underline" href="Week Two - WISdom Weeks Sunday 20th May Week A.pdf" data-hover="Summer 2018 WISDOM Sessions Timetable">Summer I/GCSE 2018 WISDOM Sessions Timetable</a></h3>
             <h3><a class="uk-link-heading effect-underline" href="WISDOM Sessions Timetable FINAL.pdf" data-hover="WISDOM Sessions Timetable">WISDOM Sessions Timetable</a></h3>
         </div>
     </div>
