--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="uk-flex-last">
     <div class="uk-card uk-card-primary uk-card-body" id="weekaorb">Is it week A or week B?</div>
     <div>
-        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's Week B Dude! Ramadan Kareem!</div>
+        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's the Weekend! Ramadan Kareem!</div>
     </div>
 </div>
 <div class="uk-child-width-1-3" uk-grid>
@@ -71,7 +71,8 @@
         <ul class="uk-list uk-list-divider">
         	<li>In some devices not all of the items on the page show, so zoom out to ensure you're not missing anything</li>
         	<li>Also it is highly likely that the 2 week timetable will not continue next year, so this project is unfortunately coming to a close</li>
-        	<li>Good Luck to All GCSE Students! May AQA Examiners mark with mercy...</li>
+        	<li>Good luck to everyone's results on August 23rd!</li>
+            <li>Thanks to everyone who made my school life!</li>
         </ul>
         <hr>
         <h>Website Re-Design - Atomicsong @ Commit #89</h>
