Did some additional clarifications

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h2 class="uk-modal-title">More information</h2>
         <ul class="uk-list uk-list-divider">
         	<li>In some devices not all of the items on the page show, so zoom out to ensure you're not missing anything</li>
-        	<!--<li>Also it is highly likely that the 2 week timetable will not continue next year, so this project is unfortunately coming to a close</li>-->
+        	<li>Also it is confirmed that the 2 week timetable will not continue next year, so this project is unfortunately coming to a close and will hopefully be handed over to another school. Thank you to everyone who made this possible!</li>
         	<li>Good luck to everyone's results on August 23rd!</li>
             <li>Thanks to everyone who made my school life!</li>
         </ul>
