forgot to add this :stuck_out_tongue:

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div>
         <div class="uk-light uk-background-transparent uk-padding">
             <h4 style="font-size: 2em">What week is it next week?</h4>
-            <p style="font-size: 1.3em">It's going to be Week B on Sunday 8th July</p>
+            <strike><p style="font-size: 1.3em">It's going to be Week B on Sunday 8th July</strike> I don't think there are any more weeks...</p>
         </div>
     </div>
     <div>
